appId: com.zaimimran.almari
# UC-F06-16
---
- runFlow: ../lib/sample-closet.yaml
- tapOn:
    id: "header-profile"
- extendedWaitUntil:
    visible: "Profile.*"
    timeout: 10000
- tapOn: "Back"
- extendedWaitUntil:
    visible:
      id: "home-create"
    timeout: 10000
